# OpenCorporates-DeepWiki

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile-ollama-local  Dockerfile.bak  Makefile  README.md  TODO.md  check_context.py  check_observe.py  deepwiki  docker-compose.yml  next.config.ts  oc-andrey-zaharov_docs-central_wiki_20251111_095619.md  package.json  prompts-for-cursor.md  pyproject.toml  pytest.ini  review.txt  test_integration.py  test_version.py
.github/workflows/: test.yml
api/: README.md  __init__.py  api.py  config.py  data_pipeline.py  deepwiki  logging_config.py  main.py  models.py  oc-andrey-zaharov_docs-central_wiki_20251107_135629.md  ollama_patch.py  prompts.py  pyproject.toml  rag.py  server.py  simple_chat.py  websocket_wiki.py
api/cli/: IMPLEMENTATION_SUMMARY.md  README.md  USAGE_EXAMPLE.md  __init__.py  completion.py  config.py  main.py  progress.py  utils.py
api/cli/commands/: __init__.py  config_cmd.py  delete.py  export.py  generate.py  list_wikis.py
api/clients/: __init__.py  bedrock_client.py  dashscope_client.py  google_embedder_client.py  openai_client.py  openrouter_client.py
api/config/: embedder.json  generator.json  lang.json
api/core/: __init__.py  chat.py  completion.py  github.py
api/server/: __init__.py  main.py  server.py  websocket_wiki.py
api/server/routes/: export.py  models.py  repositories.py  system.py  wiki_cache.py
api/server/services/: __init__.py  repository.py
api/services/: __init__.py  data_pipeline.py  rag.py  wiki_context.py
api/tools/: embedder.py
api/utils/: __init__.py  change_detection.py  chat.py  completion.py  export.py  github.py  mode.py  repo_scanner.py  wiki_cache.py
docs/: architecture.md  aws-secrets-manager-todo.md  backend-cli-migration-plan.md  deepeval-assessment.md  diagram-validation.md  llm-evaluation-framework-recommendations.md
new/: AGENTS.md  pyproject.toml
src/: i18n.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/[owner]/[repo]/: page.tsx
src/app/[owner]/[repo]/slides/: page.tsx
src/app/[owner]/[repo]/workshop/: page.tsx
src/app/wiki/projects/: page.tsx
src/components/: Ask.tsx  ConfigurationModal.tsx  Markdown.tsx  Mermaid.tsx  ModelSelectionModal.tsx  PageRefreshModal.tsx  ProcessedProjects.tsx  TokenInput.tsx  UserSelector.tsx  WikiTreeView.tsx  WikiTypeSelector.tsx  theme-toggle.tsx
src/contexts/: LanguageContext.tsx
src/deepwiki_cli/: __init__.py  __version__.py.template  config.py  logging_config.py  ollama_patch.py  prompts.py
src/deepwiki_cli/application/export/: __init__.py  export.py
src/deepwiki_cli/application/repository/: __init__.py  change_detection.py  scan.py
src/deepwiki_cli/application/wiki/: __init__.py  context.py  generate_content.py
src/deepwiki_cli/cli/: __init__.py  completion.py  config.py  main.py  progress.py  utils.py
src/deepwiki_cli/cli/commands/: config_cmd.py  delete.py  export.py  generate.py  list_wikis.py  sync.py
src/deepwiki_cli/clients/: __init__.py  bedrock_client.py  google_embedder_client.py  openai_client.py  openrouter_client.py
src/deepwiki_cli/config/: embedder.json  repo.json
src/deepwiki_cli/core/: __init__.py  completion.py  github.py
src/deepwiki_cli/domain/: __init__.py  models.py  schemas.py  types.py
src/deepwiki_cli/infrastructure/clients/ai/: __init__.py  bedrock_client.py  cursor_agent_client.py  google_embedder_client.py  lmstudio_client.py  openai_client.py  openrouter_client.py
src/deepwiki_cli/infrastructure/clients/github/: __init__.py  client.py
src/deepwiki_cli/infrastructure/config/: __init__.py  defaults.py  loaders.py  settings.py
src/deepwiki_cli/infrastructure/config/files/: embedder.json  generator.json  repo.json
src/deepwiki_cli/infrastructure/embedding/: __init__.py  embedder.py  lmstudio_patch.py  ollama_patch.py
src/deepwiki_cli/infrastructure/formats/: __init__.py  format_converter.py  json_compact.py  toon_adapter.py
src/deepwiki_cli/infrastructure/logging/: __init__.py  setup.py
src/deepwiki_cli/infrastructure/observability/: __init__.py  langfuse_client.py
src/deepwiki_cli/infrastructure/prompts/: __init__.py  builders.py
src/deepwiki_cli/infrastructure/prompts/templates/: wiki_page_prompt.txt  wiki_structure_prompt.txt
src/deepwiki_cli/infrastructure/storage/: __init__.py  cache.py  workspace.py
src/deepwiki_cli/services/: __init__.py  data_pipeline.py  rag.py  wiki_context.py
src/deepwiki_cli/shared/: __init__.py  json_utils.py  structlog.py
src/deepwiki_cli/templates/: wiki_page_prompt.txt  wiki_structure_prompt.txt
src/deepwiki_cli/tools/: embedder.py
src/deepwiki_cli/utils/: __init__.py  change_detection.py  completion.py  export.py  github.py  repo_scanner.py  wiki_workspace.py
src/messages/: en.json
src/polyfills/: serverLocalStorage.ts
src/styles/: prismTheme.ts
src/types/: repoinfo.tsx
src/utils/: mermaidValidation.ts  wikiPrompts.ts
test/: test_extract_repo_name.py
tests/: README.md  __init__.py  run_tests.py
tests/api/: test_api.py
tests/integration/: test_fallback.py  test_full_integration.py  test_server_mode.py  test_standalone_mode.py
tests/unit/: test_all_embedders.py  test_cli.py  test_config.py  test_config_env_files.py  test_data_pipeline_embeddings.py  test_database_manager_cache.py  test_export.py  test_extract_repo_name.py  test_format_converter.py  test_generate_helpers.py  test_generate_structure.py  test_google_embedder.py  test_json_utils.py  test_mode.py  test_ollama_patch.py  test_openrouter_client.py  test_performance.py  test_prompts.py  test_property.py  test_rag_token_limit.py  test_repo_scanner.py  test_schemas.py  test_security.py  test_truncate_string.py  test_utils.py  test_wiki_workspace.py
