[tool.poetry]
name = "opencorporates-deepwiki-cli"
version = "0.0.1.dev221+e5bf2ee"
description = "Pure CLI for OpenCorporates DeepWiki with interactive and parameterized modes."
authors = ["OpenCorporates DeepWiki Team"]
readme = "README.md"
packages = [{ include = "deepwiki_cli", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
bump = true
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)$"


[tool.poetry.scripts]
deepwiki = "deepwiki_cli.cli.main:main"

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
pydantic = ">=2.12.0"
pydantic-settings = ">=2.0.0"
google-generativeai = ">=0.3.0"
tiktoken = ">=0.12.0"
adalflow = ">=1.1.0"
faiss-cpu = ">=1.12.0"
requests = ">=2.32.0"
python-dotenv = ">=1.2.0"
openai = ">=2.7.0"
aiohttp = ">=3.13.0"
click = ">=8.0.0,<8.3.0"
enlighten = ">=1.14.0"
 simple-term-menu = ">=1.6.0"
structlog = ">=24.1"
watchfiles = ">=0.21.0"
returns = "^0.26.0"
toolz = "^1.1.0"
hypothesis = "^6.148.0"
lmstudio = "^1.5.0"
langfuse = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-xdist = ">=3.0.0"
pytest-cov = "^7.0.0"
deepeval = "^3.7.0"
ruff = ">=0.14.0"
mypy = "^1.18.0"

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
  ".git",
  ".mypy_cache",
  ".ruff_cache",
  ".pytest_cache",
  "build",
  "dist",
  "tmp",
  "docs",
  "bin/smoke_test_loader.py",
]

[tool.ruff.lint]
select = [
  "A", # A: flake8-builtins
  "ANN", # ANN: flake8-annotations
  "ARG", # ARG: flake8-unusedargs
  "B", # B: flake8-bugbear
  "BLE", # BLE: flake8-blind-except
  "C4", # C4:  flake8-comprehensions
  "C90", # C90: McCabe Complexity
  "COM", # COM: flake8-commas
  "D", # D: pydocstyle
  "DTZ", # DTZ: flake8-datetimez
  "ERA", # ERA: eradicate
  "F", # F: pyflakes
  "FBT", # FBT: flake8-boolean-trap
  "G", # G: flake8-logging-format
  "I", # I: isort
  "ICN", # ICN: flake8-import-conventions
  "INP", # INP: flake8-no-pep420
  "INT", # INT: flake8-gettext
  "ISC", # ISC: flake8-implicit-str-concat
  "N", # N: pep8-naming
  "NPY", # NPY: NumPy-specific rules
  "PD", # PD:: pandas-vet
  "PGH", # PGH: pygrep-hooks
  "PIE", # PIE: flake8-pie
  "PL", # PLC: Pylint
  "PT", # PT: flake8-pytest-style
  "PTH", # PTH: flake8-use-pathlib
  "PYI", # PYI: flake8-PYI
  "Q", # Q: flake8-quotes
  "RET", # RET: flake8-return
  "RSE", # RSE: flake8-raise
  "RUF", # RUF: Ruff-specific rules
  "S", # S: flake8-bandit
  "SIM", # SIM: flake8-simplify
  "SLF", # SLF: flake8-self
  "T20", # T20: flake8-print
  "TCH", # TCH: flake8-type-checking
  "TID", # TID: flake8-tidy-imports
  "TRY", # TRY: tryceratops
  "UP", # UP: PyUpgrade
  "W", # W: pycodestyles Warnings
]
ignore = [
  "G004",  # Logging statement uses f-string (style preference, f-strings are fine)
  "BLE001",  # Do not catch blind exception: `Exception` (sometimes necessary)
  "TRY300",  # Consider moving this statement to an `else` block (style preference)
  "TRY401",  # Redundant exception object included in `logging.exception` call (style preference)
  "PLR0913",  # Too many arguments in function definition (sometimes necessary)
  "PLR0912",  # Too many branches (style preference)
  "FBT001",  # Boolean-typed positional argument (style preference)
  "FBT002",  # Boolean default positional argument (style preference)
  "PTH110",  # `os.path.exists()` should be replaced by `Path.exists()` (style preference)
  "PTH112",  # `os.path.isdir()` should be replaced by `Path.is_dir()` (style preference)
  "PTH113",  # `os.path.isfile()` should be replaced by `Path.is_file()` (style preference)
  "PTH116",  # `os.stat()` should be replaced by `Path.stat()` (style preference)
  "PTH118",  # `os.path.join()` should be replaced by `Path` with `/` operator (style preference)
  "PTH119",  # `os.path.basename()` should be replaced by `Path.name` (style preference)
  "PTH120",  # `os.path.dirname()` should be replaced by `Path.parent` (style preference)
  "PTH123",  # `open()` should be replaced by `Path.open()` (style preference)
  "PTH206",  # Replace `.split(os.sep)` with `Path.parts` (style preference)
  "DTZ005",  # `datetime.datetime.now()` called without a `tz` argument (often not critical)
  "TRY002",  # Create your own exception (style preference)
  "TRY003",  # Avoid specifying long messages outside the exception class (style preference)
  "PLR2004",  # Magic value used in comparison (style preference)
  "D100",  # Missing docstring in public module (style preference)
  "D102",  # Missing docstring in public method (style preference)
  "C901",  # Function too complex (style preference)
  "RUF003",  # Comment contains ambiguous character (style preference)
  "S607",  # Starting a process with a partial executable path (often false positive)
  "S603",  # `subprocess` call: check for execution of untrusted input (often false positive)
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed (sometimes necessary)
  "PLC0415",  # `import` should be at the top-level of a file (sometimes necessary for conditional imports)
  "SLF001",  # Private member accessed (common in tests)
  "ARG001",  # Unused function argument (sometimes intentional)
  "ARG002",  # Unused method argument (sometimes intentional)
  "ANN201",  # Missing return type annotation for public function (style preference)
  "INP001",  # File is part of an implicit namespace package (structural preference)
  "PLR0915",  # Too many statements (style preference, sometimes necessary)
  "A002",  # Function argument shadowing Python builtin (common parameter names like `format`)
  "D101",  # Missing docstring in public class (style preference)
  "D103",  # Missing docstring in public function (style preference)
  "D104",  # Missing docstring in public package (style preference)
  "D107",  # Missing docstring in `__init__` (style preference)
  "D205",  # Missing blank line after docstring summary (style preference)
  "D417",  # Missing argument descriptions in the docstring (style preference)
  "B904",  # Within an `except` clause, raise exceptions with `raise ... from err` (style preference)
  "N815",  # MixedCase variable in function scope (style preference)
  "N806",  # Variable in function should be lowercase (style preference)
  "A001",  # Variable is shadowing a Python builtin (sometimes necessary)
  "COM812",  # Trailing comma missing (conflicts with formatter)
]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "FBT003", "PT019", "PLR2004", "ERA001"]  # Allow assert statements, boolean positional args in @patch decorators, mock parameters that look like fixtures in tests, magic values in tests, and commented code in tests

[tool.ruff.format]
quote-style = "double" # Use double quotes for strings.
indent-style = "space" # Indent with spaces, rather than tabs.
skip-magic-trailing-comma = false # Respect magic trailing commas.
line-ending = "auto" # Auto-detect the appropriate line ending.
docstring-code-format = false # auto-format code examples in docstrings
docstring-code-line-length = "dynamic" # use dynamic line length for code examples in docstrings.

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = false
exclude = [
    "(\\.git|build|dist|tmp|docs|bin/smoke_test_loader\\.py)",
]

# Ignore missing type stubs for external libraries without type annotations
[[tool.mypy.overrides]]
module = [
    "adalflow.*",
    "requests.*",
    "tqdm.*",
]
ignore_missing_imports = true

[[tool.poetry.source]]
name = "ocpy"
url = "https://open-corporates-089449186373.d.codeartifact.eu-west-2.amazonaws.com/pypi/dev/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "ocpyupload"
url = "https://open-corporates-089449186373.d.codeartifact.eu-west-2.amazonaws.com/pypi/dev/"
priority = "explicit"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = [
    "-v",
    "--strict-markers",
    "--disable-warnings",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests that take more than a few seconds",
    "network: Tests that require network access",
    "performance: Performance tests",
    "security: Security tests",
    "property: Property-based tests using Hypothesis",
]

[tool.coverage.run]
source = ["src/deepwiki_cli"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
